--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="bg-indigo-400 p-10 rouded-lg shadow-lg">
+  <h1>Home#index</h1>
+  <p>Find me in app/views/home/index.html.erb</p>
+</div>
