--- a/app/views/authors/posts/edit.html.erb
+++ b/app/views/authors/posts/edit.html.erb
@@ -1,6 +1,19 @@
-<h1>Editing Post</h1>
+<div class="flex flex-row justify-between items-center mt-4 mb-8">
+  <div class="text-5xl text-yellow-500 font-light">Editing post</div>
+</div>
 
-<%= render 'form', post: @post %>
+<div class="mb-8">
+  <%= link_to '< Back', posts_path, class: 'bg-yellow-100 hover:bg-yellow-500 hover:text-white text-yellow-500 text-sm py-2 px-4 rounded' %>
+</div>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<div class="grid grid-cols-4 gap-4">
+  <div class="main-data col-span-4 lg:col-span-1">
+    <div class="bg-white shadow rounded px-8 pt-6 pb-8 mb-4">
+      <%= render 'form', post: @post %>
+    </div>
+  </div>
+  
+  <div class="main-data bg-white shadow rounded px-8 pt-6 pb-8 mb-4 col-span-4 lg:col-span-3">
+    EMPTY
+  </div>
+</div>
