--- a/app/views/authors/posts/index.html.erb
+++ b/app/views/authors/posts/index.html.erb
@@ -1,49 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<div>
-  <h2>Posts</h2>
-  <%= link_to 'New Post', new_post_path %>
+<div class="flex flex-row justify-between items-center mt-4 mb-8">
+  <div class="text-5xl text-yellow-500 font-light">Posts list</div>
+  <%= link_to 'New Post', new_post_path, class: 'bg-yellow-400 hover:bg-yellow-600 text-white text-sm py-2 px-4 rounded' %>
 </div>
 
 <% @posts.each do |post| %>
-  <%= link_to post do %>
-    <div class="card">
-      <div class="card-body">
-      <h3><%= post.title %></h3>
-      <p><%= post.description %></p>
-      </div>
-    </div>
+  <%= link_to edit_post_path(post.id) do %>
+    <% render 'post', post: post %>
   <% end %>
 <% end %>
-
-<h1>Posts</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Published</th>
-      <th>Published at</th>
-      <th>Author</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.description %></td>
-        <td><%= post.published %></td>
-        <td><%= post.published_at %></td>
-        <td><%= post.author_id %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
