--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-indigo-400 p-10 rouded-lg shadow-lg">
+<div class="shadow-md">
   <h1>Home#index</h1>
   <p>Find me in app/views/home/index.html.erb</p>
 </div>
