--- a/app/views/layouts/authors.html.erb
+++ b/app/views/layouts/authors.html.erb
@@ -11,8 +11,8 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <div class="container">
+  <body class="bg-gray-50">
+    <div class="container mx-auto px-8 sm:px-0">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
