--- a/app/views/authors/posts/index.html.erb
+++ b/app/views/authors/posts/index.html.erb
@@ -5,8 +5,10 @@
   <%= link_to 'New Post', new_post_path, class: 'bg-yellow-400 hover:bg-yellow-600 text-white text-sm py-2 px-4 rounded' %>
 </div>
 
-<% @posts.each do |post| %>
-  <%= link_to edit_post_path(post.id) do %>
-    <% render 'post', post: post %>
+<div class="grid grid-cols-3 lg:grid-cols-6 gap-3 grid-flow-col">
+  <% @posts.each do |post| %>
+      <%= link_to edit_post_path(post.id), class: 'block hover:bg-transparent' do %>
+        <% render 'post', post: post %>
+      <% end %>
   <% end %>
-<% end %>
+</div>
