--- a/app/views/authors/posts/edit.html.erb
+++ b/app/views/authors/posts/edit.html.erb
@@ -33,52 +33,55 @@
         <span class="p-0.5 pl-2 pr-2 bg-red-100 text-red-500 rounded-lg">Unpublished</span>
       <% end %>
     </div>
-    <ul id="elements">
-      <% @post.elements.each do |element| %>
-        <% if element.persisted? %>
-          <li class="element-item">
-          <% if element.paragraph? %>
-            <div class="post-element mb-2 border border-dashed border-yellow-200 p-2">
-              <div class="element-content">
-                <% if element.content.present? %>
-                  <%= element.content %>
-                <% else %>
-                  Click here to add content
-                <% end %>
-              </div>
-              
-              <div class="element-form hidden">
-                <%= form_with model: [@post, element] do |element_form| %>
-                  <%= element_form.rich_text_area :content %>
-                  <%= element_form.submit 'Save', class: 'cursor-pointer mt-4 bg-yellow-400 hover:bg-yellow-600 text-white text-xs py-1 px-2 rounded' %>
-                  <span class="cursor-pointer cancel bg-yellow-100 hover:bg-yellow-500 hover:text-white text-yellow-500 text-xs py-1 px-2 rounded">Cancel</span>
-                  <%= link_to 'Delete', post_element_path(@post, element), method: :delete, class: 'cursor-pointer mt-4 bg-red-300 hover:bg-red-600 text-xs py-1 px-2 rounded', data: { confirm: 'Are you sure you want to delete it?' }%>
-                <% end %>
-              </div>
-            </div>
-          <% elsif element.image? %>
-            <div class="post-element mb-2 border border-dashed border-yellow-200 p-2">
-              <% if element.image.present? %>
-                <div class="relative">
-                <%= image_tag element.image %>
-                <%= link_to 'Delete', post_element_path(@post, element), method: :delete, class: 'cursor-pointer mt-4 bg-red-300 hover:bg-red-600 text-xs py-1 px-2 rounded block absolute top-1 right-5', data: { confirm: 'Are you sure you want to delete it?' }%>
+
+    <div class="elements-container" data-controller="elements">
+      <ul id="elements" data-action="drop->elements#sort">
+        <% @post.elements.order(position: :asc).each do |element| %>
+          <% if element.persisted? %>
+            <li class="element-item" data-id="<%= element.id %>">
+            <% if element.paragraph? %>
+              <div class="post-element mb-2 border border-dashed border-yellow-200 p-2">
+                <div class="element-content">
+                  <% if element.content.present? %>
+                    <%= element.content %>
+                  <% else %>
+                    Click here to add content
+                  <% end %>
                 </div>
-              <% else %>
-                <%= form_with model: [@post, element] do |element_form| %>
-                  <div>
-                    <%= element_form.file_field :image %>
-                  </div>
-                  <div>
+                
+                <div class="element-form hidden">
+                  <%= form_with model: [@post, element] do |element_form| %>
+                    <%= element_form.rich_text_area :content %>
                     <%= element_form.submit 'Save', class: 'cursor-pointer mt-4 bg-yellow-400 hover:bg-yellow-600 text-white text-xs py-1 px-2 rounded' %>
-                    <%= link_to 'Cancel', post_element_path(@post, element), method: :delete, class: "cursor-pointer cancel bg-yellow-100 hover:bg-yellow-500 hover:text-white text-yellow-500 text-xs py-1 px-2 rounded" %>
+                    <span class="cursor-pointer cancel bg-yellow-100 hover:bg-yellow-500 hover:text-white text-yellow-500 text-xs py-1 px-2 rounded">Cancel</span>
+                    <%= link_to 'Delete', post_element_path(@post, element), method: :delete, class: 'cursor-pointer mt-4 bg-red-300 hover:bg-red-600 text-xs py-1 px-2 rounded', data: { confirm: 'Are you sure you want to delete it?' }%>
+                  <% end %>
+                </div>
+              </div>
+            <% elsif element.image? %>
+              <div class="post-element mb-2 border border-dashed border-yellow-200 p-2">
+                <% if element.image.present? %>
+                  <div class="relative">
+                  <%= image_tag element.image %>
+                  <%= link_to 'Delete', post_element_path(@post, element), method: :delete, class: 'cursor-pointer mt-4 bg-red-300 hover:bg-red-600 text-xs py-1 px-2 rounded block absolute top-1 right-5', data: { confirm: 'Are you sure you want to delete it?' }%>
                   </div>
+                <% else %>
+                  <%= form_with model: [@post, element] do |element_form| %>
+                    <div>
+                      <%= element_form.file_field :image %>
+                    </div>
+                    <div>
+                      <%= element_form.submit 'Save', class: 'cursor-pointer mt-4 bg-yellow-400 hover:bg-yellow-600 text-white text-xs py-1 px-2 rounded' %>
+                      <%= link_to 'Cancel', post_element_path(@post, element), method: :delete, class: "cursor-pointer cancel bg-yellow-100 hover:bg-yellow-500 hover:text-white text-yellow-500 text-xs py-1 px-2 rounded" %>
+                    </div>
+                  <% end %>
                 <% end %>
-              <% end %>
-            </div>
+              </div>
+            <% end %>
+            </li>
           <% end %>
-          </li>
         <% end %>
-      <% end %>
-    </ul>
+      </ul>
+    </div>
   </div>
 </div>
