--- a/app/views/layouts/readers.html.erb
+++ b/app/views/layouts/readers.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JtaBlog</title>
+    <title>method missing - josé tapadas alves</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -11,21 +11,7 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="bg-gray-50">
-    <div class="container mx-auto px-8 sm:px-0">
-
-      <% if notice %>
-        <div class="bg-yellow-100 border-t-4 border-yellow-500 rounded-b text-yellow-900 px-4 py-3 shadow-md mt-4" role="alert">
-          <div class="flex items-center">
-            <div class="py-1"><svg class="fill-current h-6 w-6 text-yellow-500 mr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M2.93 17.07A10 10 0 1 1 17.07 2.93 10 10 0 0 1 2.93 17.07zm12.73-1.41A8 8 0 1 0 4.34 4.34a8 8 0 0 0 11.32 11.32zM9 11V9h2v6H9v-4zm0-6h2v2H9V5z"/></svg></div>
-            <div>
-              <p class="text-sm"><%= notice %></p>
-            </div>
-          </div>
-        </div>
-      <% end %>
-
-      <%= yield %>
-    </div>
+  <body class="bg-black">    
+    <%= yield %>
   </body>
 </html>
