--- a/app/views/readers/home/blog.html.erb
+++ b/app/views/readers/home/blog.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg-black mx-auto px-8 sm:px-0 mt-4 ">    
+<div class="container bg-black mx-auto px-8 sm:px-0 mt-4 w-4/5">    
   <div class="hero">
     <div class="text-8xl text-yellow-300 font-light">method missing</div>
       <div class="font-light text-lg text-gray-400">josé tapadas alves / software developer / zurich</div>
